ver 0.22.4 (not yet released)

ver 0.22.3 (2020/11/06)
* playlist
  - add option "as_directory", making CUE file expansion optional
* storage
  - curl: fix crash bug
* filter
  - fix garbage after "Audio format not supported by filter" message
  - ffmpeg: support planar output
  - ffmpeg: support sample formats other than 16 bit

ver 0.22.2 (2020/10/28)
* database
  - simple: purge songs and virtual directories for unavailable plugins
    on update
* input
  - qobuz/tidal: fix protocol errors due to newlines in error messages
  - smbclient: disable by default due to libsmbclient crash bug
* playlist
  - soundcloud: fix protocol errors due to newlines in error messages
* state_file: save on shutdown

ver 0.22.1 (2020/10/17)
* decoder
  - opus: apply the OpusHead output gain even if there is no EBU R128 tag
  - opus: fix track/album ReplayGain fallback
* output
  - alsa: don't deadlock when the ALSA driver is buggy
  - jack, pulse: reduce the delay when stopping or pausing playback
* playlist
  - cue: fix two crash bugs
* state_file: fix the state_file_interval setting

ver 0.22 (2020/09/23)
* protocol
  - "findadd"/"searchadd"/"searchaddpl" support the "sort" and
    "window" parameters
  - add command "readpicture" to download embedded pictures
  - command "moveoutput" moves an output between partitions
  - command "delpartition" deletes a partition
  - show partition name in "status" response
* tags
  - new tags "Grouping" (for ID3 "TIT1"), "Work" and "Conductor"
* input
  - curl: support "charset" parameter in URI fragment
  - ffmpeg: allow partial reads
  - io_uring: new plugin for local files on Linux (using liburing)
  - smbclient: close unused SMB/CIFS connections
* database
  - upnp: drop support for libupnp versions older than 1.8
* playlist
  - cue: integrate contents in database
* decoder
  - ffmpeg: support RTSP
  - mad: remove option "gapless", always do gapless
  - sidplay: add option "default_genre"
  - sidplay: map SID name field to "Album" tag