@@ -1,4 +1,6 @@
 ver 0.22.4 (not yet released)
+* decoder
+  - dsdiff: apply padding to odd-sized chunks
 
 ver 0.22.3 (2020/11/06)
 * playlist
